--- a/style.css
+++ b/style.css
@@ -1,60 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
+
 * {
     font-family: 'Vazirmatn', sans-serif
 }
 
-.title {
+/* Title */
+.titleName h1 {
+    color: #002D72;
     text-align: center;
-    color: rgb(255, 196, 37);
-
 }
 
-body {
-    background-image: url(petco.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-
+h1 span {
+    color: #D50032;
 }
 
-#sanDiego, #padres {
+/* Search bar */
+#searchBar {
+    text-align: center;
     position: relative;
-    top: 25px;
+    top: -20px;
+    margin: 0;
 
 }
-#sanDiego {
-    height: 75px;
-    padding-right: 35px;
-}
 
-.titleName {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    bottom: 70px;
-}
-
-/* Roster Section */
+/* Team name Section */
 #roster {
     /* display: flex; */
-    width: 500px;
-    
+    width: 360px;
+    height: 470px;
     position: absolute;
     top: 200px;
-    border: 5px solid #FFC425;
+    border: 5px solid #002D72;
     background-color: white;
-    
+
 
 }
+
+#roster h4 {
+    color: #002D72;
+}
+
 #roster>ul {
-    color: #2F241D;
-    list-style: number;
+    color: #D50032;
+    list-style: none;
 }
 
 #firstHalf {
     position: static;
 }
+
 #secondHalf {
     position: relative;
+    left: 170px;
+    bottom: 392px;
+}
 
+/* Team info section */
+#teamInfo {
+    display: grid;
+    /* grid-template-columns: 200px 400px 200px; */
+    
+    border: 3px solid black;
+    position: absolute;
+    left: 500px;
+    top: 175px;
+    width: 800px;
+    height: 600px;
+    color:#002D72;
+}
+#teamInfo h4 {
+    margin-left: 7px;
+}
+
+#description {
+    border: 3px solid black;
+    grid-column-start: 4;
+    grid-column-end: 10;
+}
+#logo {
+    border: 3px solid black;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+#year {
+    grid-column-start: 10;
+    grid-column-end: 12;
+
+    border: 3px solid black;
+}
+#jersey{
+    border: 3px solid black;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+#stadiumPic{
+    border: 3px solid black;
+    grid-column-start: 4;
+    grid-column-end: 10;
+}
+#socialMedia {
+    border: 3px solid black;
+    grid-column-start: 10;
+    grid-column-end: 12;
 }
