--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ h1 span {
 
 }
 
+#resetBtn {
+    position: absolute;
+    left: 829px;
+    top: 73px;
+}
+
 /* Team name Section */
 #roster {
     /* display: flex; */
@@ -55,19 +61,30 @@ h1 span {
     bottom: 392px;
 }
 
+h2 {
+    position: absolute;
+    left: 75px;
+    color: #D50032;
+}
+
 /* Team info section */
 #teamInfo {
     display: grid;
     /* grid-template-columns: 200px 400px 200px; */
-    
+
     border: 3px solid black;
     position: absolute;
-    left: 500px;
-    top: 175px;
-    width: 800px;
-    height: 600px;
-    color:#002D72;
+    left: 440px;
+    top: 130px;
+    width: 950px;
+    height: 650px;
+    color: #002D72;
 }
+
+#teamInfo div {
+    text-align: center;
+}
+
 #teamInfo h4 {
     margin-left: 7px;
 }
@@ -77,29 +94,50 @@ h1 span {
     grid-column-start: 4;
     grid-column-end: 10;
 }
+
+#description p {
+    font-size: 11px;
+    text-align: left;
+    max-width: 440.34px;
+    max-height: 325px;
+}
+
 #logo {
     border: 3px solid black;
     grid-column-start: 1;
     grid-column-end: 4;
+    max-width: 261.98px;
+    max-height: 325px;
 }
+
 #year {
     grid-column-start: 10;
     grid-column-end: 12;
-
+    max-width: 247.67px;
+    max-height: 325px;
     border: 3px solid black;
 }
-#jersey{
+
+#jersey {
     border: 3px solid black;
     grid-column-start: 1;
     grid-column-end: 4;
+    max-width: 261.98px;
+    max-height: 325px;
 }
-#stadiumPic{
+
+#stadiumPic {
     border: 3px solid black;
     grid-column-start: 4;
     grid-column-end: 10;
+    max-width: 440.34px;
+    max-height: 325px;
 }
+
 #socialMedia {
     border: 3px solid black;
     grid-column-start: 10;
     grid-column-end: 12;
+    max-width: 247.67px;
+    max-height: 325px;
 }
